# sdl-projects

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  meson.build
boids/: CMakeLists.txt  boid.c  boid.h  main.c  meson.build
cgl/: CMakeLists.txt  definitions.h  grid.c  grid.h  main.c  meson.build
gameoflife/: CMakeLists.txt  Definitions.h  GameOfLife.c  Grid.c  Grid.h  Main.c
include/: color.h
scripts/: format.sh
snake/: CMakeLists.txt  Definitions.h  Input.c  Input.h  Main.c  Snake.c  Snake.h  config.h  definitions.h  input.c  input.h  main.c  meson.build  snake.c  snake.h
snake/src/: Main.c
sortvisualizer/: CMakeLists.txt  Main.c  SortVisualizer.c
subprojects/: sdl3.wrap
sv/: CMakeLists.txt  main.c  meson.build  sort.c  sort.h
